kubernetes-networks/canary/web-deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: wildermesser/web
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
